# mypantry-clip

./: .gitignore  PLAN.md  README.md  architecture.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-openrouter.js  test-openrouter2.js
apps/api/: .env.example  Dockerfile  LICENSE.md  debug.py  fly.toml  main.py  pyproject.toml  supabase_pub_key.json
apps/api/src/: config.py
apps/api/src/dependencies/: auth.py  rate_limit.py
apps/api/src/routers/: auth.py  extract.py  home.py  privacy.py  share.py  substitute.py  sync.py
apps/api/src/services/: llm.py  supabase_client.py
apps/api/src/utils/: logger.py
apps/extension/: .env.example  LICENSE.md  astro.config.mjs  package.json  playwright.config.ts  vitest.config.ts
public/: background.js  manifest.json
scripts/: build-ext-if-stale.mjs  coverage-summary.mjs  run-coverage.mjs
src/: background.ts
src/pages/: pantry.astro  popup.astro  recipe.astro  setup.astro
src/styles/: global.scss  pantry.scss  popup.scss  recipe.scss
src/utils/: conversions.ts  db.ts  parser.ts
supabase/migrations/: 20260226213327_create_recipes_table.sql  20260325000000_add_user_id_to_shared_recipes.sql
tests/api/: conftest.py  test_auth_dependency.py  test_auth_router.py  test_config.py  test_cors.py  test_extract.py  test_llm.py  test_llm_service.py  test_pages.py  test_rate_limit.py  test_share.py  test_share_helpers.py  test_substitute.py  test_supabase_client.py  test_sync.py
tests/extension/: setupTests.ts  test_auth_utils.test.ts  test_background.test.ts  test_sync.test.ts  (+9 more)
(+63 files in other folders)
