[project]
name = "api"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.133.0",
    "uvicorn>=0.41.0",
    "pydantic-settings>=2.7.1",
    "supabase>=2.13.0",
    "upstash-redis>=1.3.1",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "google-genai>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "httpx>=0.28.0",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "../../coverage/api/html"

[tool.coverage.lcov]
output = "../../coverage/api/lcov.info"
